# Autonomous-Systems

./: README.md
G4.2_MCL/code/: CMakeLists.txt  package.xml  setup.py
G4.2_MCL/code/launch/: mcl.launch
G4.2_MCL/code/maps/: real_map.pgm  real_map.yaml
G4.2_MCL/code/results/real/: rmse_data_1600_G_K.txt  rmse_data_1600_G_NK.txt  rmse_data_1600_K.txt  rmse_data_1600_NK.txt  rmse_data_1600_U_K.txt  rmse_data_1600_U_NK.txt  rmse_data_400_G_K.txt  rmse_data_400_G_NK.txt  rmse_data_400_K.txt  rmse_data_400_NK.txt  rmse_data_400_U_K.txt  rmse_data_400_U_NK.txt  rmse_data_800_G_K.txt  rmse_data_800_G_NK.txt  rmse_data_800_U_K.txt  rmse_data_800_U_NK.txt  trajectories.txt
G4.2_MCL/code/rosbags/: KIDNAP.bag  NO_KIDNAP.bag
G4.2_MCL/code/src/mcl_node/: map.py  mcl_node.py  micro_simulator.py  odom.py  particle_filter.py  rmse_plot.py  scan.py  traj_plot.py
